8306986: [lworld] C2 compilation fails with assert "Should have been buffered"