src/hotspot/share/opto/parseHelper.cpp
@@ -362,10 +362,9 @@ void Parse::do_withfield() {
   }
 
   // Clone the inline type node and set the new field value
-  InlineTypeNode* new_vt = InlineTypeNode::make_uninitialized(gvn(), gvn().type(holder)->inline_klass());
-  for (uint i = 2; i < holder->req(); ++i) {
-    new_vt->set_req(i, holder->in(i));
-  }
+  InlineTypeNode* new_vt = holder->clone()->as_InlineType();
+  new_vt->set_oop(gvn().zerocon(T_PRIMITIVE_OBJECT));
+  new_vt->set_is_buffered(gvn(), false);
   new_vt->set_field_value_by_offset(field->offset(), val);
   {
     PreserveReexecuteState preexecs(this);
